Refactor course numbers
