# learning_resources/etl/prolearn.py
@@ -11,7 +11,7 @@ import requests
 from django.conf import settings
 
 from learning_resources.etl.constants import ETLSource
-from learning_resources.etl.utils import transform_topics
+from learning_resources.etl.utils import generate_course_numbers_json, transform_topics
 from learning_resources.models import LearningResourceOfferor, LearningResourcePlatform
 
 log = logging.getLogger(__name__)
@@ -316,6 +316,9 @@ def _transform_course(
         "url": parse_url(course),
         "image": parse_image(course),
         "description": course["body"],
+        "course": {
+            "course_numbers": generate_course_numbers_json(course["nid"]),
+        },
         "published": True,
         "topics": parse_topic(course),
         "runs": _transform_runs(course),
